Replace com.google.common.base.Function (partly) (#2200)
Replace more instances of com.google.common.base.Function and Predicate
---------

Co-authored-by: Kirill Peshin <kirill.peshin@bsc-ideas.com>
Co-authored-by: Kirill Peshin <kirill.peshin@bscmsc.ru>